<?xml version="1.0"?>
<package format="3">
    <name>b1_navigation</name>
    <version>0.0.0</version>
    <description>The b1_navigation package</description>

    <maintainer email="federico.rollo@leonardo.com">Federico Rollo</maintainer>
    <license>BSD</license>
    
    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>pointcloud_to_laserscan</depend>

    <export>                               
        <build_type>ament_cmake</build_type> 
    </export> 

</package>
